Add authorization flows for google and spotify
